More simulation study

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /cost_analysis/
 /1_PV_ICE_waste_calculations/old_calc_versions/
 /2_data_preparation/RELOG_import_data/CandidateLocations/
+/2_data_preparation/CandidateLocations_RAW/
